--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react-dom": "^18.0.7",
     "@types/react-redux": "^7.1.25",
     "@types/uuid": "^9.0.1",
+    "init": "^0.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
-    "typescript": "^4.8.4",
+    "storybook": "^7.0.27",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -29,12 +31,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -48,5 +53,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "7.0.27",
+    "@storybook/addon-interactions": "7.0.27",
+    "@storybook/addon-links": "7.0.27",
+    "@storybook/blocks": "7.0.27",
+    "@storybook/preset-create-react-app": "7.0.27",
+    "@storybook/react": "7.0.27",
+    "@storybook/react-webpack5": "7.0.27",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prop-types": "15.8.1",
+    "webpack": "5.88.1"
   }
 }
