--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "1-lesson",
+  "homepage": "https://artkosmos.github.io/List-Of-Notes",
+  "name": "list-of-notes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -33,6 +34,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns \"node_modules/(?!axios)/\"",
@@ -73,6 +76,7 @@
     "@storybook/testing-library": "0.0.14-next.2",
     "babel-plugin-named-exports-order": "0.0.2",
     "eslint-plugin-storybook": "^0.6.12",
+    "gh-pages": "^6.0.0",
     "jest": "^29.6.3",
     "jest-environment-jsdom": "^29.6.1",
     "jest-image-snapshot": "^6.1.0",
